tdf#117842: use XUnoTunnel to get wrapped connection reliably

XDataDefinitionSupplier::getDataDefinitionByConnection may take
not only direct reference to expected connection type, but also
connectivity::OConnectionWeakWrapper wrapping it.

Change-Id: I88925f9403b51f0cf13f02b5f00d3765a242230e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121890
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>