connectivity/source/drivers/firebird/Driver.cxx
@@ -25,6 +25,7 @@
 #include <strings.hrc>
 #include <resource/sharedresources.hxx>
 
+#include <comphelper/servicehelper.hxx>
 #include <cppuhelper/supportsservice.hxx>
 #include <osl/file.hxx>
 #include <osl/process.h>
@@ -190,8 +191,9 @@ sal_Int32 SAL_CALL FirebirdDriver::getMinorVersion(  )
 uno::Reference< XTablesSupplier > SAL_CALL FirebirdDriver::getDataDefinitionByConnection(
                                     const uno::Reference< XConnection >& rConnection)
 {
-    Connection* pConnection = static_cast< Connection* >(rConnection.get());
-    return pConnection->createCatalog();
+    if (Connection* pConnection = comphelper::getUnoTunnelImplementation<Connection>(rConnection))
+        return pConnection->createCatalog();
+    return {};
 }
 
 uno::Reference< XTablesSupplier > SAL_CALL FirebirdDriver::getDataDefinitionByURL(
